deploy-local/deployments-ingress-controller/deployments-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-container
        image: joaobatistalimajunior44/my-portifolis-cicd:v1
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: service-test-app
spec:
  selector:
    app: test-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP  # Service interno
